Update .gitignore to exclude OneDrive and Deno files

--- a/templates/.gitignore
+++ b/templates/.gitignore
@@ -13,6 +13,8 @@ Heimdall/Heimdall/
 HydDdR-a/HydDdR-a/
 MindS/MindsDB/
 NeuUuR-o/NeuUuR-o/
+/OneDrive/.849C9593-D756-4E56-8D6E-42412F2A707B
+.deno/
 # filepath: /C:/Users/Owner/Desktop/task orginiser/ToDoListOrganizer/templates/.gitignore
 node_modules/
 *.log
@@ -27,3 +29,5 @@ Heimdall/Heimdall/
 HydDdR-a/HydDdR-a/
 MindS/MindsDB/
 NeuUuR-o/NeuUuR-o/
+/OneDrive/.849C9593-D756-4E56-8D6E-42412F2A707B
+.deno/
