--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-
 Flask==2.0.1
-requests==2.26.0
-SQLAlchemy==1.4.22
+requests==2.30.0
+SQLAlchemy==2.0.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
+httpx==0.23.0
+openai==1.24.0
+langchain-openai==0.2.3
+langchain==0.3.4
+mindsdb_sdk==3.1.7
+supabase-py==0.0.2
+Sphinx==8.1.3
+pytest-asyncio==0.18.3
+pytest-cov==6.0.0
+pytest-xdist==3.5.0
+python-dotenv==1.0.1
+psycopg2-binary==2.9.10
+uvicorn==0.32.1
