--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ pytest-xdist>=3.5.0,<4
 python-dotenv>=1.0.1,<2
 psycopg2-binary>=2.9.10,<3
 uvicorn>=0.32.1,<1
+pyodbc>=4.0.32,<5
+Flask-Cors>=3.0.10,<4
+transformers>=4.0.0,<5
+torch>=1.7.0,<2
