--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ SQLAlchemy>=2.0.0,<3
 python-dotenv>=1.0.1,<2
 pyjwt
 pytest
+requests>=2.25.1,<3
+aiohttp>=3.8.1,<4
+numpy>=1.21.0
+scikit-learn>=1.0.2
+codeproject.ai-sdk>=1.0.0
