--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP=app.py
 FLASK_ENV=development
 DATABASE_URL=sqlite:///database.db
-SECRET_KEY=3f5e2b8c9d1e4f7a8b9c0d1e2f3a4b5c
+SECRET_KEY=your secret key
