--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FLASK_APP=app.py
 FLASK_ENV=development
 DATABASE_URL=sqlite:///database.db
-SECRET_KEY=your secret key
+SECRET_KEY=your_generated_secret_key
