--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-SQLAlchemy>=2.5.1,<3
 Flask-Cors>=3.0.10,<4
 SQLAlchemy>=2.0.0,<3
 python-dotenv>=1.0.1,<2
-pyjwt
+pyjwt>=2.0.0,<3
 pytest
 requests>=2.25.1,<3
 aiohttp>=3.8.1,<4
