--- a/modulesettings.json
+++ b/modulesettings.json
@@ -8,7 +8,12 @@
         "analysis_endpoint": "/analyze",
         "prediction_endpoint": "/predict",
         "model": "gpt-3.5-turbo",
-        "max_tokens": 1000
+        "max_tokens": 1000,
+        "codeproject_ai": {
+            "server_url": "http://localhost:32168",
+            "required": true,
+            "startup_check": true
+        }
     },
     "database": {
         "type": "sqlite",
