Update environment configuration for PostgreSQL and add API keys

--- a/.env
+++ b/.env
@@ -1,4 +1,21 @@
 FLASK_APP=app.py
 FLASK_ENV=development
-DATABASE_URL=sqlite:///database.db
-SECRET_KEY=your_generated_secret_key
+
+# Database
+DATABASE_URL=postgresql://username:password@localhost:5432/tododb
+POSTGRES_USER=your_username
+POSTGRES_PASSWORD=your_password
+
+# API Keys
+OPENAI_API_KEY=your_openai_key
+CODEPROJECT_AI_KEY=your_codeproject_key
+
+# JWT Secret
+JWT_SECRET_KEY=your_jwt_secret_key
+
+# Server Configuration
+SERVER_HOST=localhost
+SERVER_PORT=32168
+
+# CodeProject.AI Server
+CODEPROJECT_AI_SERVER_URL=http://localhost:32168
