Update .env configuration for JWT and database settings

--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 FLASK_APP=app.py
 FLASK_ENV=development
 
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/tododb
-POSTGRES_USER=your_username
-POSTGRES_PASSWORD=your_password
+# Generate a secure random key for JWT
+JWT_SECRET_KEY=your-generated-secret-key-here
 
-# API Keys
-OPENAI_API_KEY=your_openai_key
-CODEPROJECT_AI_KEY=your_codeproject_key
+# Database - Choose either SQLite (simpler) or PostgreSQL
+# For SQLite (easier to start with):
+DATABASE_URL=sqlite:///database.db
 
-# JWT Secret
-JWT_SECRET_KEY=your_jwt_secret_key
+# For PostgreSQL (if you want to use it later):
+#DATABASE_URL=postgresql://username:password@localhost:5432/tododb
+#POSTGRES_USER=your_postgres_username
+#POSTGRES_PASSWORD=your_postgres_password
 
-# Server Configuration
-SERVER_HOST=localhost
-SERVER_PORT=32168
+# CodeProject.AI Server (we can set this up later)
+#CODEPROJECT_AI_SERVER_URL=http://localhost:32168
+#CODEPROJECT_AI_KEY=your_codeproject_key
 
-# CodeProject.AI Server
-CODEPROJECT_AI_SERVER_URL=http://localhost:32168
+# OpenAI (optional - only if you want to use OpenAI features)
+#OPENAI_API_KEY=your_openai_key
