--- a/backup_20250216_072632/requirements.txt
+++ b/backup_20250216_072632/requirements.txt
@@ -1,7 +1,7 @@
 Flask>=3.1.0,<4.0
 Flask-RESTful>=0.3.9,<1.0
 Flask-SQLAlchemy>=2.5.1,<3.0
-Flask-Cors>=3.0.10,<4.0
+Flask-Cors>=4.0.2<5.0
 SQLAlchemy>=2.0.0,<3.0
 python-dotenv>=1.0.1,<2.0
 pyjwt>=2.3.4,<3.0
