--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Flask>=3.1.0,<4.0
-Flask-RESTful>=0.3.9,<1.0
-Flask-SQLAlchemy>=2.5.1,<3.0
-Flask-Cors>=3.0.10,<4.0
-SQLAlchemy>=2.0.0,<3.0
+Flask>=3.0.2,<4.0
+Flask-RESTful>=0.3.10,<1.0
+Flask-SQLAlchemy>=3.1.1,<4.0
+Flask-Cors>=4.0.0,<5.0
+SQLAlchemy>=2.0.25,<3.0
 python-dotenv>=1.0.1,<2.0
-pyjwt>=2.3.4,<3.0
-pytest
-requests>=2.25.1,<3.0
-aiohttp>=3.8.1,<4.0
-numpy>=1.21.0
-scikit-learn>=1.0.2
+pyjwt>=2.8.0,<3.0
+pytest>=8.0.0,<9.0
+requests>=2.31.0,<3.0
+aiohttp>=3.9.3,<4.0
+numpy>=1.26.3,<2.0
+scikit-learn>=1.4.0,<2.0
 codeproject.ai-sdk>=0.0.21
-openai>=0.27.0
+openai>=1.8.0,<2.0
