--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ numpy>=1.26.3,<2.0
 scikit-learn>=1.4.0,<2.0
 codeproject.ai-sdk>=0.0.21
 openai>=1.8.0,<2.0
+fastapi>=0.68.0,<0.69.0
+pydantic>=1.6.2,<2.0.0
